# chip-8

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  chip.cpp  chip.hpp  keyboard.hpp  main.cpp  sfml_keyboard.cpp  sfml_keyboard.hpp
src/tests/: CMakeLists.txt  test_chip_display.cpp
tests/: CMakeLists.txt
